# block

./: .gitignore  blk-helper.d.ts  blk1010_wasm.d.ts  build.py  build_android.sh  build_wechat.sh  mk.d.ts  package.json  private_key.pepk  replaceSubPath.py  tiny_image_parallel.sh  tinypng-config.json  tinypng.sh  tsconfig.json  uml_fill.drawio
art/: adbox.tps  adventure_btns.tps  block.tps  btns.tps  chuizi.tps  clear.tps  click.tps  daojishi.tps  game_fish.tps  game_over.tps  level.tps  setting.tps  theme_tog.tps  xiaochu.tps  zk.tps
art/level_select_block1/: level_select_block1.tps
art/level_select_block10/: level_select_block10.tps
art/level_select_block2/: level_select_block2.tps
art/level_select_block3/: level_select_block3.tps
art/level_select_block4/: level_select_block4.tps
art/level_select_block5/: level_select_block5.tps
art/level_select_block6/: level_select_block6.tps
art/level_select_block7/: level_select_block7.tps
art/level_select_block8/: level_select_block8.tps
art/level_select_block9/: level_select_block9.tps
art/theme/: bear.tps  cat.tps  fruit.tps  loading.tps  sheep.tps
assets/: readme.md
assets/chunks/: common-vs.chunk  pixel.chunk
assets/lib/: jy_gameserver_sdk_1.0.1.min.js  jy_wxsdk_1.3.8.min.js
assets/scene/: SceneSplash.ts  loading.scene  splash.scene
assets/script/: Boot.ts  GameRoot.ts  MK.ts  PolicyView.ts  Touch.ts  X.ts
build-depend/: android.keystore.old  blk  block-master-brain-puzzles-firebase-adminsdk-h0h77-65bca7ed36.json  build.sh  buildConfig_android.json  buildConfig_android_debug.json  buildConfig_douyin.json  buildConfig_wechatgame.json  build_remote.sh  encryptConfig.sh  private_key.pepk  tinypng.sh  version_generator.js  web_config.json
build-templates/: templates-version.json
native/engine/ios/: ._CMakeLists.txt  AppDelegate.mm  CMakeLists.txt  Info.plist  Podfile
native/engine/ios/Base.lproj/: LaunchScreen.storyboard
native/engine/ios/BlockMaster.xcworkspace/: contents.xcworkspacedata
native/engine/ios/Plugins/: AdDelegate.h  AdDelegate.m  AdMaxPlugin.h  AdMaxPlugin.m  AppsFlyerPlugin.h  AppsFlyerPlugin.m  BannerAdDelegate.h  BannerAdDelegate.m  BuglyPlugin.h  BuglyPlugin.m  CallbackContext.h  CallbackContext.m  InterstitialAdDelegate.h  InterstitialAdDelegate.m  JsbCall.h  JsbCall.m  JsbEvent.h  JsbEvent.m  Plugin.h  Plugin.m  PluginManager.h  PluginManager.m  RewardedAdDelegate.h  RewardedAdDelegate.m  SplashPlugin.h  SplashPlugin.m  TaPlugin.h  TaPlugin.m  ToastPlugin.h  ToastPlugin.m
native/engine/ios/service/: SDKWrapper.m
preview-template/: blk.js  index.ejs
tools/: crop.py  rnd_map.py  swig.sh
(+1142 files in other folders)
